--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@mdx-js/loader": "^3.0.0",
+		"@mdx-js/react": "^3.0.0",
+		"@next/mdx": "^14.1.0",
+		"@types/mdx": "^2.0.11",
 		"clsx": "^2.1.0",
 		"next": "14.1.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"server-only": "^0.0.1"
 	},
 	"devDependencies": {
