--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@mdx-js/loader": "^3.0.0",
 		"@mdx-js/react": "^3.0.0",
 		"@next/mdx": "^14.1.0",
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/mdx": "^2.0.11",
 		"clsx": "^2.1.0",
 		"next": "14.1.0",
