--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"next": "14.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"server-only": "^0.0.1"
+		"server-only": "^0.0.1",
+		"usehooks-ts": "^2.15.1"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "5.0.2",
