[Module4.3] Server action add product and use qgraphql + save cookies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,15 @@
 				}
 			}
 		],
-
+		// Server Actions `action={…}`
+		"@typescript-eslint/no-misused-promises": [
+			"error",
+			{
+				"checksVoidReturn": {
+					"attributes": false
+				}
+			}
+		],
 		"@typescript-eslint/consistent-type-imports": [
 			"error",
 			{
