[Module4.3] Server action: prepare basket cart  with products and count in navigation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,6 +76,11 @@
 		// numbers and booleans are fine in template strings
 		"@typescript-eslint/restrict-template-expressions": [
 			"error",
+			{ "checksVoidReturn": false }
+		],
+
+		"@typescript-eslint/no-misused-promises": [
+			"error",
 			{ "allowNumber": true, "allowBoolean": true }
 		],
 
