--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server-only": "^0.0.1",
+		"stripe": "^14.22.0",
+		"stripe-event-types": "^3.1.0",
 		"usehooks-ts": "^2.15.1"
 	},
 	"devDependencies": {
