[Module 5.5 and 6.2] - creat order but not display; - prepare contact form

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -99,7 +99,7 @@
 	},
 	"overrides": [
 		{
-			"files": ["src/app/**/*.ts?(x)", "middleware.ts"],
+			"files": ["src/app/**/*.ts?(x)", "src/middleware.ts"],
 			"rules": {
 				"import/no-default-export": "off"
 			}
