--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"codegen": "graphql-codegen --config .graphqlrc.ts"
 	},
 	"dependencies": {
+		"@clerk/nextjs": "^4.29.12",
 		"@mdx-js/loader": "^3.0.1",
 		"@mdx-js/react": "^3.0.1",
 		"@next/env": "^14.1.0",
@@ -26,7 +27,8 @@
 		"server-only": "^0.0.1",
 		"stripe": "^14.22.0",
 		"stripe-event-types": "^3.1.0",
-		"usehooks-ts": "^2.15.1"
+		"usehooks-ts": "^2.15.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "5.0.2",
