--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -99,11 +99,15 @@
 	},
 	"overrides": [
 		{
-			"files": ["src/app/**/*.ts?(x)", "src/middleware.ts"],
+			"files": [
+				"src/app/**/*.ts?(x)",
+				"src/middleware.ts",
+				"src/i18n.ts"
+			],
 			"rules": {
 				"import/no-default-export": "off"
 			}
 		}
 	],
-	"ignorePatterns": ["*.js", "*.jsx"]
+	"ignorePatterns": ["*.js", "*.jsx", "*.mjs"]
 }
