--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
 		"@clerk/nextjs": "^4.29.12",
 		"@mdx-js/loader": "^3.0.1",
 		"@mdx-js/react": "^3.0.1",
-		"@next/env": "^14.1.0",
-		"@next/mdx": "^14.1.0",
+		"@next/env": "^14.2.0",
+		"@next/mdx": "^14.2.0",
 		"@parcel/watcher": "^2.4.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/mdx": "^2.0.11",
 		"clsx": "^2.1.0",
 		"graphql": "^16.8.1",
 		"lucide-react": "^0.331.0",
-		"next": "14.1.0",
+		"next": "14.2.0-canary.60",
+		"next-intl": "^3.11.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"server-only": "^0.0.1",
@@ -41,7 +42,7 @@
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10.4.17",
 		"eslint": "^8.56.0",
-		"eslint-config-next": "14.1.0",
+		"eslint-config-next": "14.2.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-import": "^2.29.1",
 		"postcss": "^8.4.35",
